--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_RAPID_API_ARTICLE_KEY=0db0797be0msha432561cdb48453p1d38b9jsn95d096e2f02a
+VITE_RAPID_API_TRANSLATE_KEY=0db0797be0msha432561cdb48453p1d38b9jsn95d096e2f02a
